overflow fix

--- a/styles/base/_globals.scss
+++ b/styles/base/_globals.scss
@@ -47,6 +47,7 @@ body {
 
 .container {
   margin-bottom: rem(40);
+  overflow: hidden;
   padding: 0 rem(40);
 
   &:last-of-type {
