--- a/styles/components/_opening.scss
+++ b/styles/components/_opening.scss
@@ -120,6 +120,7 @@ $logoScale: 2.75;
     line-height: 200%;
     margin: auto;
     opacity: 0;
+    overflow: hidden;
     position: absolute;
     text-align: center;
     top: 45%;
